grammar.js
    document: ($) => seq(
      optional(choice($.minus_metadata, $.plus_metadata)),
      alias(prec.right(repeat($._block_not_section)), $.section),
      repeat($.section),
    ),

    // Common building blocks formerly in common/common.js.

    link_label: ($) => seq('[', repeat1(choice(
      $._inline_label_element,
      $._label_nested_brackets,
      $._soft_line_break,
    )), ']'),

    // A balanced square-bracket group nested inside a link label.  Per
    // CommonMark §6.3 a link label may contain balanced brackets (e.g.
    // `[link with [nested] text]`); the inner `[...]` is literal label text,
    // not a nested link.  Recursive so arbitrarily deep nesting is accepted;
    // the label itself closes only at the bracket that balances the opening
    // `[`, not at the first `]` that closes an inner group.
    _label_nested_brackets: ($) => seq('[', repeat(choice(
      $._inline_label_element,
      $._label_nested_brackets,
      $._soft_line_break,
    )), ']'),

    // One inline element allowed inside a link label.
    _inline_label_element: ($) => choice(
      $._whitespace,
      $.inline_code,
      $.autolink,
      $.html_inline,
      $.mdx_jsx_inline,
      $.math_inline,
      $.strong,
      $.emphasis,
      $.strikethrough,
      $.backslash_escape,
      $.entity_reference,
      $.numeric_character_reference,
      alias($._label_text, $.text_span),
    ),

    // Runs of plain text tokens inside a label. Mirrors paragraph `text_span`
    // (the same §3.2/§3.3 classifiers) but with square brackets excluded so a
    // nested `[...]` cannot be swallowed by the label.
    link_destination: ($) => prec.dynamic(PRECEDENCE_LEVEL_LINK, choice(
      seq('<', repeat(choice($._text_no_angle, $.backslash_escape, $.entity_reference, $.numeric_character_reference)), '>'),
      seq(
        choice(
          $._word,
          punctuation_without($, ['<', '(', ')']),
          $.backslash_escape,
          $.entity_reference,
          $.numeric_character_reference,
          $._link_destination_parenthesis,
        ),
        repeat(choice(
          $._word,
          punctuation_without($, ['(', ')']),
          $.backslash_escape,
          $.entity_reference,
          $.numeric_character_reference,
          $._link_destination_parenthesis,
        )),
      ),
    )),
    _link_destination_parenthesis: ($) => seq('(', repeat(choice(
      $._word,
      punctuation_without($, ['(', ')']),
      $.backslash_escape,
      $.entity_reference,
      $.numeric_character_reference,
      $._link_destination_parenthesis,
    )), ')'),
    _text_no_angle: ($) => choice($._word, punctuation_without($, ['<', '>']), $._whitespace),
    _block_not_section: ($) => choice(
      alias($._setext_heading1, $.setext_heading),
      alias($._setext_heading2, $.setext_heading),
      $.paragraph,
      $.indented_code_block,
      $.block_quote,
      $.thematic_break,
      $.list,
      $.fenced_code_block,
      $.blank_line,
      $.html_block,
      $.mdx_jsx_block,
      $.link_reference_definition,
      $.footnote_definition,
      $.math_block,
      $.directive_block,
      $.image_block,
      $.pipe_table,
    ),
    section: ($) => choice($._section1, $._section2, $._section3, $._section4, $._section5, $._section6),
    _section1: ($) => prec.right(seq(
      alias($._atx_heading1, $.atx_heading),
      repeat(choice(
        alias(choice($._section6, $._section5, $._section4, $._section3, $._section2), $.section),
        $._block_not_section,
      )),
    )),
    _section2: ($) => prec.right(seq(
      alias($._atx_heading2, $.atx_heading),
      repeat(choice(
        alias(choice($._section6, $._section5, $._section4, $._section3), $.section),
        $._block_not_section,
      )),
    )),
    _section3: ($) => prec.right(seq(
      alias($._atx_heading3, $.atx_heading),
      repeat(choice(
        alias(choice($._section6, $._section5, $._section4), $.section),
        $._block_not_section,
      )),
    )),
    _section4: ($) => prec.right(seq(
      alias($._atx_heading4, $.atx_heading),
      repeat(choice(
        alias(choice($._section6, $._section5), $.section),
        $._block_not_section,
      )),
    )),
    _section5: ($) => prec.right(seq(
      alias($._atx_heading5, $.atx_heading),
      repeat(choice(
        alias($._section6, $.section),
        $._block_not_section,
      )),
    )),
    _section6: ($) => prec.right(seq(
      alias($._atx_heading6, $.atx_heading),
      repeat($._block_not_section),
    )),

    // LEAF BLOCKS

    // A thematic break. This is currently handled by the external scanner but maybe could be
    // parsed using normal tree-sitter rules.
    //
    // https://github.github.com/gfm/#thematic-breaks
    image_block: ($) => prec.dynamic(PRECEDENCE_LEVEL_IMAGE_BLOCK, seq(
      optional($._whitespace),
      '!',
      $.link_label,
      '(',
      optional($._whitespace),
      optional($.link_destination),
      optional($._whitespace),
      ')',
      optional($._whitespace),
      choice($._newline, $._eof),
    )),

    // MDX JSX block. Shallow block-level recognizer: a line that begins
    // (after optional whitespace) with an MDX-style JSX tag (<Name ...>,
    // <Name ... />, or </Name>) is surfaced as `mdx_jsx_block`.
    // Paired matching of open/close tags is not required at the grammar
    // level; consumers can validate. Full JSX/expression semantics are out
    // of scope — see docs/textlint-mapping.md.
    paragraph: ($) => seq(alias($._inline_content, $.inline), choice($._newline, $._eof)),

    // A blank line including the following newline. Publicly named so metrics
    // like mehen's BLANK can target it directly.
    //
    // https://github.github.com/gfm/#blank-lines
    blank_line: ($) => seq($._blank_line_start, choice($._newline, $._eof)),

    // CONTAINER BLOCKS

    // A block quote. If its first paragraph starts with `[!NOTE]`,
    // `[!TIP]`, `[!IMPORTANT]`, `[!WARNING]`, or `[!CAUTION]` (GFM alerts),
    // the whole node is aliased to `callout` with a `callout_type` child.
    _newline: ($) => seq(
      $._line_ending,
      optional($.block_continuation),
    ),
    _soft_line_break: ($) => seq(
      $._soft_line_ending,
      optional($.block_continuation),
    ),
    _word: ($) => choice(
      new RegExp('[^' + PUNCTUATION_CHARACTERS_REGEX + ' \\t\\n\\r]+'),
      /\[[xX]\]/,
      /\[[ \t]\]/,
    ),
    _whitespace: ($) => /[ \t]+/,

    // ---------------------------------------------------------------------
    // INLINE CONTENT
    //
    // `_inline_content` is the rule used wherever block rules previously
    // emitted `alias(_line, $.inline)` (paragraph, ATX heading content,
    // footnote definition body). It emits a sequence of classified tokens
    // (word_token / numeric_token / identifier_like_token / path_like_token
    // and punctuation-class nodes) plus inline structural nodes
    // (inline_code, emphasis, strong, strikethrough, inline_link, full_reference_link, collapsed_reference_link, shortcut_link, image, autolink,
    // html_inline, mdx_jsx_inline, math_inline, footnote_reference).
    //
    // The outer `inline` wrapper is kept so existing queries that match
    // `(paragraph (inline))` continue to work. Consumers targeting
    // `(inline (emphasis))` etc. now get structured children.
    // ---------------------------------------------------------------------

    _inline_content: ($) => prec.right(repeat1(choice(
      $._inline_element,
      $._soft_line_break,
    ))),
    // Single-line inline content (no soft line breaks) — used for contexts
    // like ATX headings, footnote definition bodies, and similar where the
    // content must fit on one logical line.
    text_span: ($) => prec.right(repeat1(choice(
      $.numeric_token,
      $.path_like_token,
      $.identifier_like_token,
      $.word_token,
      $.terminator,
      $.separator,
      $.bracket,
      $.operator_like,
    ))),

    // --- §3.2 token classifiers -----------------------------------------

    // Pure alphabetic run (letters only). Simple word in prose.
    word_token: ($) => new RustRegex('\\p{L}+'),

    // Numeric tokens: integers, decimals, multi-dot versions (1, 1.0, 1.2.3).
    terminator: ($) => choice('.', '?', '!', '\u3002', '\u2026'),

    // Clause separators.
    image: ($) => prec.dynamic(PRECEDENCE_LEVEL_IMAGE, prec.right(seq(
      '!',
      $.link_label,
      optional(choice(
        // inline destination
        seq('(', optional($._whitespace), optional($.link_destination),
          optional(seq($._whitespace, $.link_title)),
          optional($._whitespace), ')'),
        // full reference: ![alt][label]
        prec(1, $.link_label),
        // collapsed reference: ![alt][]
        prec(1, seq('[', ']')),
      )),
    ))),

    // Inline links, split into explicit kinds so consumers can distinguish
    // inline, full-reference, collapsed-reference and shortcut forms directly
    // (mirrors upstream split_parser, which exposes them as separate node
    // kinds). Resolution of reference forms against link_reference_definitions
    // is a consumer concern — the grammar has no way to know whether a label
    // resolves — so a bare `[text]` always parses as shortcut_link.
    //
    //   inline_link              [text](url "title")
    //   full_reference_link      [text][label]   (adjacent brackets, no space)
    //   collapsed_reference_link [text][]
    //   shortcut_link            [text]
    //
    // Static precedence on the reference arms (prec(1) vs prec(0)) ensures two
    // adjacent link_labels collapse into ONE full_reference_link instead of two
    // separate shortcut_links.
